# aalux3andsudoku

./: .gitignore  Makefile  README.md  SCOPE.md  USER_GUIDE.md  platformio.ini
.github/workflows/: build-x3.yml  ci.yml  release.yml  release_candidate.yml
.skills/: SKILL.md
docs/: BACKLOG.md  UX_REDESIGN.md  hardcover-sync-plan.md  i18n.md
emulator/: .gitignore  Dockerfile  MILESTONE_2_PLAN.md  README.md  docker-compose.yml
emulator/native/: CMakeLists.txt  main.cpp
emulator/web/: app.js  index.html  style.css
lib/Epub/: Epub.cpp  Epub.h
lib/FsHelpers/: FsHelpers.h
lib/GfxRenderer/: BitmapHelpers.h  GfxRenderer.cpp  GfxRenderer.h
lib/KOReaderSync/: KOReaderSyncClient.cpp  KOReaderSyncClient.h  ProgressMapper.cpp
lib/Txt/: Txt.cpp
lib/Xtc/: Xtc.cpp  Xtc.h
lib/hal/: HalClock.cpp  HalClock.h  HalDisplay.cpp  HalDisplay.h  HalSystem.cpp
plans/settings-redesign/: canvas.mdx  plan.mdx
plans/stats-revamp/: .plan-url  canvas.mdx  plan.mdx
scripts/: bake_cat_sprites.py  bake_pet_sprites.py  gen_i18n.py  generate_mockups.py  patch_einkdisplay.py  patch_simulator_lib.py  sim_seed_pet.py
src/: CrossPointSettings.cpp  CrossPointSettings.h  CrossPointState.h  JsonSettingsIO.cpp  JsonSettingsIO.h  RecentBooksStore.cpp  RecentBooksStore.h  SettingsList.h  fontIds.h  main.cpp
src/activities/: ActivityManager.cpp  ActivityManager.h  ActivityResult.h  SudokuActivity.h
src/components/: CarrouselRenderer.cpp  CarrouselRenderer.h  GrayscaleCoverPass.h  HomeProgressCache.cpp  HomeProgressCache.h  HomeRenderer.cpp  HomeRenderer.h  (+2 more)
test/: CMakeLists.txt
(+103 files in other folders)
